Connectors en subclasses ook aangepast aan de minima feature
pilot gedaan met oude data van Dorian en Lisette - gelukt